# lexile-corpus-tuner

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/: copilot-instructions.md  llm_plan.md  plan.md  text-difficulty-pipeline-plan.md  unit-test-policy.md
data/meta/: corpus_sources.json
examples/: example_config copy.yaml  example_config.yaml  run_lexile_v2_adapter.py  run_openai_rewrite.py
examples/example_corpus/: chapter1.txt  chapter1rev.txt
examples/lexile_v2_artifacts/: README.md
examples/meta/: oer_sources.example.json
scripts/: build_gutenberg_id_list.py  collect-commit-context.ps1  collect-pull-request-context.ps1  extract_simple_wiki_dump.py  load-openai-key.ps1  run-cloc.ps1  run-cloc.sh
src/lexile_corpus_tuner/: __init__.py  cli.py  config.py  constraints.py  epub.py  frequency_loader.py  models.py  pipeline.py  rewriting.py  scoring.py  textutils.py  tokenization.py  windowing.py
src/lexile_corpus_tuner/analyzer/: __init__.py  adjustments.py  cli.py  features.py  model.py  slices.py
src/lexile_corpus_tuner/calibration/: __init__.py  cli.py  featureset.py  model_store.py  train.py
src/lexile_corpus_tuner/corpus/: __init__.py  cli.py  download.py  frequencies.py  normalize.py
src/lexile_corpus_tuner/estimators/: __init__.py  base.py  dummy_estimator.py  lexile_determination_v2_adapter.py  lexile_v2_preprocessing.py
src/lexile_corpus_tuner/llm/: __init__.py  openai_client.py
tests/: __init__.py  test_cli.py  test_epub_ingestion.py  test_estimators.py  test_lexile_v2_adapter.py  test_openai_rewriter.py  test_pipeline.py  test_scoring_and_constraints.py  test_tokenization.py  test_windowing.py  utils.py
