[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "lexile-corpus-tuner"
version = "0.1.0"
description = "Lexile-inspired corpus tuner with CLI for analyzing and rewriting documents."
authors = ["Lexile Corpus Tuner Maintainers"]
license = "MIT"
readme = "README.md"
packages = [{ include = "lexile_corpus_tuner", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
typer = ">=0.9.0"
PyYAML = ">=6.0"
numpy = ">=1.23"
tensorflow = { version = ">=2.10.0", optional = true }
joblib = { version = ">=1.1.0", optional = true }
openai = { version = ">=1.40.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-cov = ">=7.0"
black = ">=23.0"
isort = ">=5.0"

[tool.poetry.extras]
lexile-v2 = ["tensorflow", "joblib"]
llm-openai = ["openai"]

[tool.poetry.scripts]
lexile-tuner = "lexile_corpus_tuner.cli:main"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
